# WhisperMeKeyboardDesktop

./: pnpm-lock.yaml
apps/app/: overlay.html  package.json
apps/app/src/: app.html
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: base.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: auth.rs  backend.rs  context.rs  lib.rs  overlay.rs
apps/app/src/lib/: commands.ts
apps/app/src/lib/components/: AuthExample.svelte  LoginScreen.svelte  NavItems.svelte
apps/app/src/lib/query/recordings/: mutations.ts
apps/app/src/lib/query/singletons/: commands.ts  manualRecorder.ts  transformer.ts  vadRecorder.ts
apps/app/src/lib/query/transcriber/: index.ts  mutations.ts  queries.ts
apps/app/src/lib/query/transform/: mutations.ts
apps/app/src/lib/services/: SetTrayIconService.ts  auth0.ts  httpClient.ts  index.ts  runTransformation.ts
apps/app/src/lib/services/clipboard/: ClipboardService.desktop.ts  ClipboardService.extension.ts  ClipboardService.ts  ClipboardService.web.ts
apps/app/src/routes/: +layout.svelte  +page.svelte
apps/app/src/routes/(config)/: +layout.svelte
apps/app/src/routes/(config)/recordings/: +page.svelte  RecordingRowActions.svelte
apps/app/src/routes/(config)/settings/transcription/: +page.svelte
apps/app/src/routes/(config)/transformations/-components/: RenderTransformationTest.svelte
apps/app/src/routes/+layout/: AppShell.svelte  GlobalSingletonsContext.svelte
apps/app/static/: overlay.html  site.webmanifest
