[package]
name = "whisperme"
version = "7.0.0"
description = "WhisperMe - AI-Enhanced Voice Keyboard"
authors = ["WhisperMe Team"]
repository = "https://github.com/whisperme-app/whisperme"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whispering_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
enigo = "0.5.0"
cpal = "0.16.0"
tracing = "0.1.41"
thiserror = "2.0.12"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
tiny_http = "0.12"
url = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys =  "0.1.3"
core-foundation-sys =  "0.8.7"
core-foundation = "0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"

